--- a/src/components/UserList.module.css
+++ b/src/components/UserList.module.css
@@ -1,6 +1,10 @@
 .wrapper {
 	width: 100%;
-	max-width: 600px;
+	max-width: 750px;
 	margin: auto;
 	padding: 1rem;
+}
+.title {
+	text-align: center;
+	margin-bottom: 4rem;
 }
