--- a/src/components/UserListFilters.module.css
+++ b/src/components/UserListFilters.module.css
@@ -1,16 +1,16 @@
 .form {
+	margin: 2rem 0;
+}
+.row {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding: 1rem;
+	margin-bottom: 1rem;
 }
-
 .active {
 	display: flex;
 	align-items: center;
 }
-.active input[type='checkbox'] {
-	height: 1rem;
-	width: 1rem;
-	margin-right: 0.5rem;
+.checkbox {
+	margin-right: 0.75rem;
 }
