--- a/src/components/UserRole.module.css
+++ b/src/components/UserRole.module.css
@@ -1,16 +1,18 @@
-.teacher {
-	background-color: #61dafb;
-}
-.student {
-	background-color: lightgreen;
-}
-.other {
-	background-color: lightgrey;
-}
 .role {
 	text-transform: uppercase;
-	font-size: 0.75rem;
-
+	font-size: var(--text-sm);
 	padding: 0.25rem 0.5rem;
-	border-radius: 0.5rem;
+	border-radius: var(--radius-sm);
+}
+
+.teacher {
+	background-color: var(--color-blue);
+}
+
+.student {
+	background-color: var(--color-purple);
+}
+
+.other {
+	background-color: var(--color-lightgray);
 }
